// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moduleCompiler compile 1`] = `
Array [
  35,
  1,
  1,
  127,
  65,
  8,
  65,
  4,
  40,
  2,
  0,
  40,
  2,
  0,
  33,
  0,
  32,
  0,
  65,
  0,
  72,
  4,
  127,
  65,
  0,
  32,
  0,
  107,
  5,
  32,
  0,
  11,
  54,
  2,
  0,
  11,
]
`;

exports[`moduleCompiler compile 2`] = `
Array [
  22,
  1,
  0,
  127,
  65,
  12,
  65,
  4,
  40,
  2,
  0,
  40,
  2,
  0,
  65,
  8,
  40,
  2,
  0,
  54,
  2,
  0,
  11,
]
`;
